{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 5035,
  "lineage": "e034d683-6f39-f5d8-234e-49626aeb0cad",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:loadbalancer/app/cheerpay-dev-alb/80fd41f7e6bacbc2",
            "arn_suffix": "app/cheerpay-dev-alb/80fd41f7e6bacbc2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cheerpay-dev-alb-643564993.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:loadbalancer/app/cheerpay-dev-alb/80fd41f7e6bacbc2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cheerpay-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-070275938947a53ac"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05061051034778702"
              },
              {
                "subnet_id": "subnet-06a6769da557c3807"
              },
              {
                "subnet_id": "subnet-0d936a49b51af678f"
              }
            ],
            "subnets": [
              "subnet-05061051034778702",
              "subnet-06a6769da557c3807",
              "subnet-0d936a49b51af678f"
            ],
            "tags": {
              "Name": "cheerpay-dev-alb"
            },
            "tags_all": {
              "Name": "cheerpay-dev-alb"
            },
            "vpc_id": "vpc-0dd43176469131d76",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a_alb",
            "module.vpc.aws_subnet.public_c_alb",
            "module.vpc.aws_subnet.public_d_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:listener/app/cheerpay-dev-alb/80fd41f7e6bacbc2/88ab03e8aa31f38f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:targetgroup/cheerpay-dev-tg/ed163b468c3ecfce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:listener/app/cheerpay-dev-alb/80fd41f7e6bacbc2/88ab03e8aa31f38f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:loadbalancer/app/cheerpay-dev-alb/80fd41f7e6bacbc2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_lb.alb",
            "module.ec2.aws_lb_target_group.ecs",
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a_alb",
            "module.vpc.aws_subnet.public_c_alb",
            "module.vpc.aws_subnet.public_d_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ecs_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:targetgroup/cheerpay-dev-tg/ed163b468c3ecfce",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:listener-rule/app/cheerpay-dev-alb/80fd41f7e6bacbc2/88ab03e8aa31f38f/45326181ae51b2fe",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:listener-rule/app/cheerpay-dev-alb/80fd41f7e6bacbc2/88ab03e8aa31f38f/45326181ae51b2fe",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:listener/app/cheerpay-dev-alb/80fd41f7e6bacbc2/88ab03e8aa31f38f",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_lb.alb",
            "module.ec2.aws_lb_listener.http",
            "module.ec2.aws_lb_target_group.ecs",
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a_alb",
            "module.vpc.aws_subnet.public_c_alb",
            "module.vpc.aws_subnet.public_d_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:targetgroup/cheerpay-dev-tg/ed163b468c3ecfce",
            "arn_suffix": "targetgroup/cheerpay-dev-tg/ed163b468c3ecfce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:targetgroup/cheerpay-dev-tg/ed163b468c3ecfce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:442376921734:loadbalancer/app/cheerpay-dev-alb/80fd41f7e6bacbc2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cheerpay-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cheerpay-dev-tg"
            },
            "tags_all": {
              "Name": "cheerpay-dev-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:security-group/sg-070275938947a53ac",
            "description": "Security group for VPC ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070275938947a53ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cheerpay-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "442376921734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cheerpay-dev-alb-sg"
            },
            "tags_all": {
              "Name": "cheerpay-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:security-group/sg-07cf97269d633e877",
            "description": "Security group for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cf97269d633e877",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cheerpay-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "442376921734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cheerpay-dev-ecs-sg"
            },
            "tags_all": {
              "Name": "cheerpay-dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_lb.alb",
            "module.ec2.aws_lb_listener.http",
            "module.ec2.aws_lb_listener_rule.ecs_rule",
            "module.ec2.aws_lb_target_group.ecs",
            "module.ec2.aws_route53_record.alb_alias",
            "module.ec2.aws_route53_zone.hostzone",
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a_alb",
            "module.vpc.aws_subnet.public_c_alb",
            "module.vpc.aws_subnet.public_d_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:security-group/sg-00ec0f610b1e8f75a",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ec0f610b1e8f75a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cheerpay-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "442376921734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cheerpay-dev-rds-sg"
            },
            "tags_all": {
              "Name": "cheerpay-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:internet-gateway/igw-0dc5e3db2f95e4614",
            "id": "igw-0dc5e3db2f95e4614",
            "owner_id": "442376921734",
            "tags": {
              "Name": "cheerpay-dev-igw"
            },
            "tags_all": {
              "Name": "cheerpay-dev-igw"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc5e3db2f95e4614",
            "id": "r-rtb-048920352b2ab889b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048920352b2ab889b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:route-table/rtb-0e47840788e19d651",
            "id": "rtb-0e47840788e19d651",
            "owner_id": "442376921734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cheerpay-dev-pri-ecs-rt"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pri-ecs-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:route-table/rtb-048920352b2ab889b",
            "id": "rtb-048920352b2ab889b",
            "owner_id": "442376921734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc5e3db2f95e4614",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cheerpay-dev-pub-alb-rt"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pub-alb-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:route-table/rtb-0491bac51bbaf95d3",
            "id": "rtb-0491bac51bbaf95d3",
            "owner_id": "442376921734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cheerpay-dev-pub-ng-rt"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pub-ng-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b909f2c0766812e2",
            "route_table_id": "rtb-0e47840788e19d651",
            "subnet_id": "subnet-0233bab3c8f5fc5eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_ecs",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950f8ca646ecf6bd",
            "route_table_id": "rtb-0e47840788e19d651",
            "subnet_id": "subnet-0b14a8b954e691d34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d19ccf803556e1",
            "route_table_id": "rtb-048920352b2ab889b",
            "subnet_id": "subnet-05061051034778702"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf006b8207a0f9a0",
            "route_table_id": "rtb-048920352b2ab889b",
            "subnet_id": "subnet-0d936a49b51af678f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_c_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03715109dc984ce52",
            "route_table_id": "rtb-048920352b2ab889b",
            "subnet_id": "subnet-06a6769da557c3807"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_d_alb",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:security-group/sg-037b2bcc2270d3eb9",
            "description": "Security group for VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037b2bcc2270d3eb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cheerpay-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "442376921734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cheerpay-dev-vpce-sg"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-0233bab3c8f5fc5eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0233bab3c8f5fc5eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-pri-a-ecs"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pri-a-ecs"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-05a7cd5f586a3723d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a7cd5f586a3723d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-private-1a-rds"
            },
            "tags_all": {
              "Name": "cheerpay-dev-private-1a-rds"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-0b14a8b954e691d34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b14a8b954e691d34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-pri-c-ecs"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pri-c-ecs"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-0f542e16161c233c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f542e16161c233c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-private-1c-rds"
            },
            "tags_all": {
              "Name": "cheerpay-dev-private-1c-rds"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_d_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-01807e7da3c9ac05a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01807e7da3c9ac05a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-private-1d-rds"
            },
            "tags_all": {
              "Name": "cheerpay-dev-private-1d-rds"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-05061051034778702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05061051034778702",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-pub-a-alb"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pub-a-alb"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-0f7fbad3457604265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7fbad3457604265",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-pub-a-ng"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pub-a-ng"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-0d936a49b51af678f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d936a49b51af678f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-pub-c-alb"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pub-c-alb"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_d_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:subnet/subnet-06a6769da557c3807",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a6769da557c3807",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442376921734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheerpay-dev-pub-d-alb"
            },
            "tags_all": {
              "Name": "cheerpay-dev-pub-d-alb"
            },
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc/vpc-0dd43176469131d76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02105a7dd659078fe",
            "default_route_table_id": "rtb-0a624f321baa97a4c",
            "default_security_group_id": "sg-00d188dbe0ab7b805",
            "dhcp_options_id": "dopt-6c55050b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd43176469131d76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a624f321baa97a4c",
            "owner_id": "442376921734",
            "tags": {
              "Name": "cheerpay-dev-vpc"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-0382cfec29726ea86",
            "dns_entry": [
              {
                "dns_name": "vpce-0382cfec29726ea86-kgqydarb.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0382cfec29726ea86-kgqydarb-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0382cfec29726ea86-kgqydarb-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01120783KI8050UK51TG"
              },
              {
                "dns_name": "ecr.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02471021EFH5EOUDCDQL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0382cfec29726ea86",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08f04c2af496eed7e",
              "eni-0f7e39854aed50079"
            ],
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-037b2bcc2270d3eb9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.126",
                "subnet_id": "subnet-0233bab3c8f5fc5eb"
              },
              {
                "ipv4": "10.0.6.98",
                "subnet_id": "subnet-0b14a8b954e691d34"
              }
            ],
            "subnet_ids": [
              "subnet-0233bab3c8f5fc5eb",
              "subnet-0b14a8b954e691d34"
            ],
            "tags": {
              "Name": "cheerpay-dev-vpce-ecr-api"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-04d4083002259d833",
            "dns_entry": [
              {
                "dns_name": "vpce-04d4083002259d833-8ohfh7z3.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-04d4083002259d833-8ohfh7z3-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-04d4083002259d833-8ohfh7z3-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z097381916DRRUK4RAVCH"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z097381916DRRUK4RAVCH"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z01118772UU994X8GSO1S"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-1.on.aws",
                "hosted_zone_id": "Z01118772UU994X8GSO1S"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04d4083002259d833",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0860e90846f5a0979",
              "eni-0b26588aa1a078781"
            ],
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-037b2bcc2270d3eb9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.65",
                "subnet_id": "subnet-0233bab3c8f5fc5eb"
              },
              {
                "ipv4": "10.0.6.112",
                "subnet_id": "subnet-0b14a8b954e691d34"
              }
            ],
            "subnet_ids": [
              "subnet-0233bab3c8f5fc5eb",
              "subnet-0b14a8b954e691d34"
            ],
            "tags": {
              "Name": "cheerpay-dev-vpce-ecr-dkr"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-09cb18470c400bc91",
            "dns_entry": [
              {
                "dns_name": "vpce-09cb18470c400bc91-8p99mbjh.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09cb18470c400bc91-8p99mbjh-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-09cb18470c400bc91-8p99mbjh-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02472291XLQBUZS5COE9"
              },
              {
                "dns_name": "logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z01134851IEBASJNVDJKB"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z09090003QUR754Z8BSA4"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0112406YHH1L84IAGLG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09cb18470c400bc91",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0189fb6e6d98a2a37",
              "eni-0b38ffa51ec0b7e91"
            ],
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-037b2bcc2270d3eb9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.18",
                "subnet_id": "subnet-0233bab3c8f5fc5eb"
              },
              {
                "ipv4": "10.0.6.117",
                "subnet_id": "subnet-0b14a8b954e691d34"
              }
            ],
            "subnet_ids": [
              "subnet-0233bab3c8f5fc5eb",
              "subnet-0b14a8b954e691d34"
            ],
            "tags": {
              "Name": "cheerpay-dev-vpce-ecr-logs"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-ecr-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-018745220758404e7",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-018745220758404e7",
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e47840788e19d651"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "cheerpay-dev-vpce-s3"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-0106f74e96d6068fb",
            "dns_entry": [
              {
                "dns_name": "vpce-0106f74e96d6068fb-d9mce4kj.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0106f74e96d6068fb-d9mce4kj-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0106f74e96d6068fb-d9mce4kj-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z097238410I6E3QKOQWYZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0106f74e96d6068fb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a9f0136ae998416b",
              "eni-0d9e739c1a06640dd"
            ],
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-037b2bcc2270d3eb9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.245",
                "subnet_id": "subnet-0233bab3c8f5fc5eb"
              },
              {
                "ipv4": "10.0.6.209",
                "subnet_id": "subnet-0b14a8b954e691d34"
              }
            ],
            "subnet_ids": [
              "subnet-0233bab3c8f5fc5eb",
              "subnet-0b14a8b954e691d34"
            ],
            "tags": {
              "Name": "cheerpay-dev-vpce-secretsmanager"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-secretsmanager"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-0ff781c8452252e21",
            "dns_entry": [
              {
                "dns_name": "vpce-0ff781c8452252e21-1igmh1gd.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ff781c8452252e21-1igmh1gd-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0ff781c8452252e21-1igmh1gd-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z09707691JWJHDDKOKB25"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z02466263I1HAARA27LIQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ff781c8452252e21",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-007ed4465b381b98c",
              "eni-0a8f96c6a06dded09"
            ],
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-037b2bcc2270d3eb9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.139",
                "subnet_id": "subnet-0233bab3c8f5fc5eb"
              },
              {
                "ipv4": "10.0.6.97",
                "subnet_id": "subnet-0b14a8b954e691d34"
              }
            ],
            "subnet_ids": [
              "subnet-0233bab3c8f5fc5eb",
              "subnet-0b14a8b954e691d34"
            ],
            "tags": {
              "Name": "cheerpay-dev-vpce-ssm"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:442376921734:vpc-endpoint/vpce-05837871f850c906d",
            "dns_entry": [
              {
                "dns_name": "vpce-05837871f850c906d-i5b5vgd7.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05837871f850c906d-i5b5vgd7-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05837871f850c906d-i5b5vgd7-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z09732281G9YT052EEPY8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05837871f850c906d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-091eb3c47dea68f4f",
              "eni-0d82dbced76bf69f7"
            ],
            "owner_id": "442376921734",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-037b2bcc2270d3eb9"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.5.254",
                "subnet_id": "subnet-0233bab3c8f5fc5eb"
              },
              {
                "ipv4": "10.0.6.109",
                "subnet_id": "subnet-0b14a8b954e691d34"
              }
            ],
            "subnet_ids": [
              "subnet-0233bab3c8f5fc5eb",
              "subnet-0b14a8b954e691d34"
            ],
            "tags": {
              "Name": "cheerpay-dev-vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "cheerpay-dev-vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dd43176469131d76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a_ecs",
            "module.vpc.aws_subnet.private_c_ecs",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}